# gn

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL  README.md  gen-proto.sh  gradido.template.conf  launch-token.template.conf
.github/workflows/: on-push.yml
doc/: blockchain-rules-v1.txt
docker/deprecated-hedera-node/: Dockerfile  README
models/: gradido.erl
proto/gradido/: gradido.proto
src/: blockchain.h  blockchain_base.cpp  blockchain_base.h  blockchain_base_deprecated.h  blockchain_gradido.cpp  blockchain_gradido.h  blockchain_gradido_def.h  blockchain_gradido_translate.cpp  blockchain_gradido_translate.h  communications.cpp  communications.h  config.cpp  config.h  dumper.h  facades_impl.cpp  facades_impl.h  file_tile.h  gradido_core_utils.cpp  gradido_core_utils.h  gradido_events.cpp  gradido_events.h  gradido_facade.cpp  gradido_facade.h  gradido_interfaces.cpp  gradido_interfaces.h  gradido_messages.cpp  gradido_messages.h  gradido_signals.cpp  gradido_signals.h  group_register.cpp  group_register.h  handshake_handler.cpp  handshake_handler.h  main.cpp  main_def.h  memory_managers.h  subcluster_blockchain.cpp  subcluster_blockchain.h  timer_pool.cpp  timer_pool.h  (+6 more)
src/bins/: add_admin_to_sb.cpp  backup.cpp  create_admin_enquiry.cpp  create_kp_identity.cpp  create_sb.cpp  demo_login.cpp  dump_blockchain.cpp  dump_group_blockchain.cpp  dump_subcluster_blockchain.cpp  gradido.cpp  gradido_deprecated.cpp  logger.cpp  node_launcher.cpp  ordering.cpp  pinger.cpp  subcluster_launcher.cpp
src/count_records/: count_records.cpp
src/dump_blockchain/: dump_blockchain.cpp
src/dump_group_blockchain/: dump_group_blockchain.cpp
src/gradido_node/: main.cpp
src/gradidomath/: gradidomath.h
src/json_rpc/: JsonRPCHandler.cpp  JsonRPCHandler.h  JsonRequestHandler.cpp  JsonRequestHandler.h  JsonRequestHandlerFactory.cpp  JsonRequestHandlerFactory.h
test/: README.md  create-topic.sh  hedera-credentials.template.cfg  json-rpc-call.sh  launch-webapp-demo.sh  ncd.py  ncd.yaml  requirements.txt  submit-message.sh  submit-transfer.sh
test/gradido/: gradido_context.py
test/gradido2/: gradido_context.py
test/hedera/: gen-proto.sh  hedera_context.py  sender.py  simulated_hedera.py
test/hedera/proto_gen.old/: BasicTypes_pb2.py  ConsensusCreateTopic_pb2.py  ConsensusDeleteTopic_pb2.py  ConsensusGetTopicInfo_pb2.py  ConsensusService_pb2.py  ConsensusService_pb2_grpc.py  ConsensusSubmitMessage_pb2.py  ConsensusTopicDefinition_pb2.py  ConsensusTopicInfo_pb2.py  ConsensusTopicState_pb2.py  ConsensusUpdateTopic_pb2.py  ContractCallLocal_pb2.py  ContractCall_pb2.py  ContractCreate_pb2.py  ContractDelete_pb2.py  ContractGetBytecode_pb2.py  ContractGetInfo_pb2.py  ContractGetRecords_pb2.py  ContractUpdate_pb2.py  CryptoAddClaim_pb2.py  CryptoAddLiveHash_pb2.py  CryptoCreate_pb2.py  CryptoDeleteClaim_pb2.py  CryptoDeleteLiveHash_pb2.py  CryptoDelete_pb2.py  CryptoGetAccountBalance_pb2.py  CryptoGetAccountRecords_pb2.py  CryptoGetClaim_pb2.py  CryptoGetInfo_pb2.py  CryptoGetLiveHash_pb2.py  CryptoGetStakers_pb2.py  CryptoService_pb2.py  CryptoService_pb2_grpc.py  CryptoTransfer_pb2.py  CryptoUpdate_pb2.py  Duration_pb2.py  ExchangeRate_pb2.py  FileAppend_pb2.py  FileCreate_pb2.py  FileDelete_pb2.py  (+31 more)
test/hedera/proto_gen.old/mirror/: ConsensusService_pb2.py  ConsensusService_pb2_grpc.py
test/webapp_demo/: webapp_demo_context.py
unittest/: test_amount.cpp  test_blockchain.cpp  test_common.cpp  test_common.h  test_communications.cpp  test_create_kp_identity.cpp  test_file_tile.cpp  test_issues.cpp  test_memory.cpp  test_nodes.cpp  test_system.cpp  test_timer_pool.cpp  test_translate.cpp  test_utils.cpp  test_worker_pool.cpp
